@@ -2,7 +2,8 @@ Version 3.0.2
 - Add: ToConstructor() can now accept results from methods as argument e.g. ToConstructor(_ => new Foo(this.GetBar())
 - Add: WhenNoAncestorMatches, WhenAnyAncestorMatches and WhenNoAncestorNamed When overloads
 - Change: Added WhenAnyAncestorNamed and marked mispelled WhenAnyAnchestorNamed as obsolete 
-- Bugfix: Private properties of base class were not checked for existence of setter and Inject attribute 
+- Bugfix: Private properties of base class were not checked for existence of setter and Inject attribute
+- Bugfix: When an object that is the scope of another object is released an Exception was thrown.
 
 Version 3.0.1
 - Add: The default scope can be changed in the NinjectSettings using 
